<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activites.LoginMainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/loginbox"
            android:layout_below="@+id/toolbar"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/login" />

        <LinearLayout
            android:id="@+id/loginbox"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:background="@drawable/loginbox"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="User Name"

                app:endIconMode="clear_text"
                app:shapeAppearance="@style/Rounded">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="Password"
                app:endIconMode="password_toggle"
                app:shapeAppearance="@style/Rounded">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/paswword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:text="@string/login" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginbox"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:background="@drawable/loginbox"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:textSize="22sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/changelanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:gravity="center"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/green"
                    android:text="@string/english" />

                <Button
                    android:id="@+id/hindi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/green"
                    android:text="@string/hindi" />

                <Button
                    android:id="@+id/gujarati"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/green"
                    android:text="@string/gujarati" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>