<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="CustomerModel"
            type="com.inaxdevelopers.mydailymilk.model.CustomerModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:padding="2dp"
                        android:text="@string/CustomerName" />

                    <TextView
                        android:text="@{CustomerModel.customerName}"
                        android:id="@+id/show_customerName"
                        android:layout_width="0dp"
                        android:textSize="14sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="2dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:padding="2dp"
                        android:text="@string/customerType" />

                    <TextView
                        android:text="@{CustomerModel.customerType}"
                        android:id="@+id/CustomerType"
                        android:layout_width="0dp"
                        android:textSize="14sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="2dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:padding="2dp"
                        android:text="@string/milk_name" />

                    <TextView
                        android:text="@{CustomerModel.Milk}"
                        android:id="@+id/Milk_Name"
                        android:textSize="14sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="2dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="2dp"
                        android:textSize="14sp"
                        android:text="@string/milk_price" />

                    <TextView
                        android:textSize="14sp"
                        android:id="@+id/Milk_pric"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@{CustomerModel.milkPrice}"
                        android:layout_weight="1"
                        android:padding="2dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:padding="2dp"
                        android:text="@string/amount" />

                    <TextView
                        android:text="@{CustomerModel.amount}"
                        android:id="@+id/amount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:padding="2dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:padding="2dp"
                        android:text="Address" />

                    <TextView
                        android:text="@{CustomerModel.customerAddress}"
                        android:id="@+id/customer_address"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:padding="2dp" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        
    </LinearLayout>
</layout>