<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
<variable
    name="MilkModel"
    type="com.inaxdevelopers.mydailymilk.model.MilkModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:orientation="vertical"
        android:layout_width="match_parent"
        app:cardCornerRadius="12dp"
        android:layout_margin="8dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="150dp"
                app:cardCornerRadius="12dp"
                android:layout_height="100dp">
                <ImageView
                    android:id="@+id/show_image"
                    android:src="@{MilkModel.milkImagePath}"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:layout_width="150dp"
                    android:layout_height="100dp"/>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="2dp"
                        android:text="@string/milk_name" />

                    <TextView
                        android:text="@{MilkModel.milkName}"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="2dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="2dp"
                        android:text="@string/milk_price" />

                    <TextView
                        android:text="@{MilkModel.milkPrice}"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="2dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="2dp"
                        android:text="@string/miilkQunty" />
                    <TextView
                        android:text="@{MilkModel.milkQuantity}"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="2dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>